Updated probot code
Signed-off-by: Peter Robinson <peter.timothy.robinson@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest && standard"
   },
   "dependencies": {
+    "p-wait-for": "^1.0.0",
     "pkg99": "^1.0.0",
     "probot": "^3.0.0"
   },
